# RoboND-Perception-Project

./: CMakeLists.txt  model.sav  output_1.yaml  output_2.yaml  output_3.yaml  project_grasp.py  project_template.py  train_svm.py  writeup_template.md
pr2_moveit/config/: ompl_planning.yaml
pr2_robot/scripts/: model_201708.sav  project_grasp.py  project_template.py
pr2_robot/src/: pr2_cloud_transformer.cpp  pr2_pick_place_server.cpp
pr2_robot/urdf/: sensor.urdf.xacro
pr2_robot/worlds/: test1_new.world  test2.world
submitted/: capture_features.py  features.py  writeup_template.md
