cmake_minimum_required(VERSION 3.8)
project(RoboND_Perception_Project)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        gazebo_grasp_plugin/include/gazebo_grasp_plugin/GazeboGraspFix.h
        gazebo_grasp_plugin/include/gazebo_grasp_plugin/GazeboGraspGripper.h
        gazebo_grasp_plugin/src/GazeboGraspFix.cpp
        gazebo_grasp_plugin/src/GazeboGraspGripper.cpp
        gazebo_grasp_plugin/CHANGELOG.rst
        gazebo_grasp_plugin/CMakeLists.txt
        gazebo_grasp_plugin/LICENSE
        gazebo_grasp_plugin/package.xml
        gazebo_grasp_plugin/README.md
        pr2_moveit/config/controllers.yaml
        pr2_moveit/config/fake_controllers.yaml
        pr2_moveit/config/grasp.yaml
        pr2_moveit/config/joint_limits.yaml
        pr2_moveit/config/kinematics.yaml
        pr2_moveit/config/ompl_planning.yaml
        pr2_moveit/config/pr2.srdf
        pr2_moveit/launch/default_warehouse_db.launch
        pr2_moveit/launch/demo.launch
        pr2_moveit/launch/fake_moveit_controller_manager.launch.xml
        pr2_moveit/launch/filter.launch
        pr2_moveit/launch/joystick_control.launch
        pr2_moveit/launch/move_group.launch
        pr2_moveit/launch/moveit.rviz
        pr2_moveit/launch/moveit_rviz.launch
        pr2_moveit/launch/ompl_planning_pipeline.launch.xml
        pr2_moveit/launch/planning_context.launch
        pr2_moveit/launch/planning_pipeline.launch.xml
        pr2_moveit/launch/pr2_moveit.launch
        pr2_moveit/launch/pr2_moveit_controller_manager.launch.xml
        pr2_moveit/launch/pr2_moveit_sensor_manager.launch.xml
        pr2_moveit/launch/run_benchmark_ompl.launch
        pr2_moveit/launch/sensor_manager.launch.xml
        pr2_moveit/launch/setup_assistant.launch
        pr2_moveit/launch/trajectory_execution.launch.xml
        pr2_moveit/launch/warehouse.launch
        pr2_moveit/launch/warehouse_settings.launch.xml
        pr2_moveit/CMakeLists.txt
        pr2_moveit/package.xml
        pr2_robot/config/controllers.yaml
        pr2_robot/config/dropbox.yaml
        pr2_robot/config/output.yaml
        pr2_robot/config/pick_list_1.yaml
        pr2_robot/config/pick_list_2.yaml
        pr2_robot/config/pick_list_3.yaml
        pr2_robot/config/pr2.rviz
        pr2_robot/config/sensors.yaml
        pr2_robot/include/pr2_robot/pr2_motion.h
        pr2_robot/include/pr2_robot/pr2_pick_place_server.h
        pr2_robot/launch/octomap_server.launch
        pr2_robot/launch/pick_place_demo.launch
        pr2_robot/launch/pick_place_project.launch
        pr2_robot/launch/robot_control.launch
        pr2_robot/launch/robot_description.launch
        pr2_robot/launch/robot_spawn.launch
        pr2_robot/materials/textures/pr2_caster_texture.png
        pr2_robot/materials/textures/pr2_wheel_left.png
        pr2_robot/materials/textures/pr2_wheel_right.png
        pr2_robot/meshes/base_v0/base.dae
        pr2_robot/meshes/base_v0/base.stl
        pr2_robot/meshes/base_v0/base_color.png
        pr2_robot/meshes/base_v0/base_L.stl
        pr2_robot/meshes/base_v0/base_normals.png
        pr2_robot/meshes/base_v0/caster.stl
        pr2_robot/meshes/base_v0/caster_L.stl
        pr2_robot/meshes/base_v0/pr2_wheel.stl
        pr2_robot/meshes/base_v0/wheel.dae
        pr2_robot/meshes/base_v0/wheel.stl
        pr2_robot/meshes/base_v0/wheel_color.png
        pr2_robot/meshes/base_v0/wheel_h.dae
        pr2_robot/meshes/base_v0/wheel_h_color.png
        pr2_robot/meshes/base_v0/wheel_normals.png
        pr2_robot/meshes/forearm_v0/forearm.dae
        pr2_robot/meshes/forearm_v0/forearm.jpg
        pr2_robot/meshes/forearm_v0/forearm.stl
        pr2_robot/meshes/forearm_v0/forearm_color.png
        pr2_robot/meshes/forearm_v0/forearm_normals.png
        pr2_robot/meshes/forearm_v0/wrist_color.png
        pr2_robot/meshes/forearm_v0/wrist_flex.dae
        pr2_robot/meshes/forearm_v0/wrist_flex.stl
        pr2_robot/meshes/forearm_v0/wrist_normals.png
        pr2_robot/meshes/forearm_v0/wrist_roll.stl
        pr2_robot/meshes/forearm_v0/wrist_roll_L.stl
        pr2_robot/meshes/gripper/finger_left.dae
        pr2_robot/meshes/gripper/finger_left_collision.dae
        pr2_robot/meshes/gripper/finger_right.dae
        pr2_robot/meshes/gripper/finger_right_collision.dae
        pr2_robot/meshes/gripper/gripper_base.dae
        pr2_robot/meshes/head_v0/head_pan.dae
        pr2_robot/meshes/head_v0/head_pan.stl
        pr2_robot/meshes/head_v0/head_pan_color.png
        pr2_robot/meshes/head_v0/head_pan_L.stl
        pr2_robot/meshes/head_v0/head_pan_normals.png
        pr2_robot/meshes/head_v0/head_tilt.dae
        pr2_robot/meshes/head_v0/head_tilt.stl
        pr2_robot/meshes/head_v0/head_tilt_color.png
        pr2_robot/meshes/head_v0/head_tilt_color_red.png
        pr2_robot/meshes/head_v0/head_tilt_color_yellow.png
        pr2_robot/meshes/head_v0/head_tilt_green.png
        pr2_robot/meshes/head_v0/head_tilt_L.stl
        pr2_robot/meshes/head_v0/head_tilt_normals.png
        pr2_robot/meshes/shoulder_v0/shoulder_lift.dae
        pr2_robot/meshes/shoulder_v0/shoulder_lift.stl
        pr2_robot/meshes/shoulder_v0/shoulder_lift_color.png
        pr2_robot/meshes/shoulder_v0/shoulder_lift_normals.png
        pr2_robot/meshes/shoulder_v0/shoulder_pan.dae
        pr2_robot/meshes/shoulder_v0/shoulder_pan.stl
        pr2_robot/meshes/shoulder_v0/shoulder_pan_color.png
        pr2_robot/meshes/shoulder_v0/shoulder_pan_normals.png
        pr2_robot/meshes/shoulder_v0/shoulder_yaw.stl
        pr2_robot/meshes/shoulder_v0/upper_arm_roll.dae
        pr2_robot/meshes/shoulder_v0/upper_arm_roll.stl
        pr2_robot/meshes/shoulder_v0/upper_arm_roll_color.png
        pr2_robot/meshes/shoulder_v0/upper_arm_roll_L.stl
        pr2_robot/meshes/shoulder_v0/upper_arm_roll_normals.png
        pr2_robot/meshes/torso_v0/torso.stl
        pr2_robot/meshes/torso_v0/torso_lift.dae
        pr2_robot/meshes/torso_v0/torso_lift.stl
        pr2_robot/meshes/torso_v0/torso_lift_color.png
        pr2_robot/meshes/torso_v0/torso_lift_L.stl
        pr2_robot/meshes/torso_v0/torso_lift_normals.png
        pr2_robot/meshes/upper_arm_v0/elbow_flex.dae
        pr2_robot/meshes/upper_arm_v0/elbow_flex.stl
        pr2_robot/meshes/upper_arm_v0/elbow_flex_color.png
        pr2_robot/meshes/upper_arm_v0/elbow_flex_normals.png
        pr2_robot/meshes/upper_arm_v0/forearm_roll.stl
        pr2_robot/meshes/upper_arm_v0/forearm_roll_L.stl
        pr2_robot/meshes/upper_arm_v0/upper_arm.dae
        pr2_robot/meshes/upper_arm_v0/upper_arm.jpg
        pr2_robot/meshes/upper_arm_v0/upper_arm.stl
        pr2_robot/meshes/upper_arm_v0/upper_arm_color.png
        pr2_robot/meshes/upper_arm_v0/upper_arm_normals.png
        pr2_robot/meshes/README.md
        pr2_robot/models/biscuits/materials/scripts/biscuits.material
        pr2_robot/models/biscuits/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/biscuits/meshes/biscuits.dae
        pr2_robot/models/biscuits/model.config
        pr2_robot/models/biscuits/model.sdf
        pr2_robot/models/book/materials/scripts/book.material
        pr2_robot/models/book/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/book/meshes/book.dae
        pr2_robot/models/book/model.config
        pr2_robot/models/book/model.sdf
        pr2_robot/models/dropbox/meshes/dropbox.dae
        pr2_robot/models/dropbox/model.config
        pr2_robot/models/dropbox/model.sdf
        pr2_robot/models/eraser/materials/scripts/eraser.material
        pr2_robot/models/eraser/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/eraser/meshes/eraser.dae
        pr2_robot/models/eraser/model.config
        pr2_robot/models/eraser/model.sdf
        pr2_robot/models/glue/materials/scripts/glue.material
        pr2_robot/models/glue/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/glue/meshes/glue.dae
        pr2_robot/models/glue/model.config
        pr2_robot/models/glue/model.sdf
        pr2_robot/models/short_table/meshes/short_table.dae
        pr2_robot/models/short_table/model.config
        pr2_robot/models/short_table/model.sdf
        pr2_robot/models/snacks/materials/scripts/snacks.material
        pr2_robot/models/snacks/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/snacks/meshes/snacks.dae
        pr2_robot/models/snacks/model.config
        pr2_robot/models/snacks/model.sdf
        pr2_robot/models/soap/materials/scripts/soap.material
        pr2_robot/models/soap/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/soap/meshes/soap.dae
        pr2_robot/models/soap/model.config
        pr2_robot/models/soap/model.sdf
        pr2_robot/models/soap2/materials/scripts/soap2.material
        pr2_robot/models/soap2/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/soap2/meshes/soap2.dae
        pr2_robot/models/soap2/model.config
        pr2_robot/models/soap2/model.sdf
        pr2_robot/models/soda_can/materials/textures/uda_can.png
        pr2_robot/models/soda_can/meshes/soda_can.dae
        pr2_robot/models/soda_can/meshes/udacity-blue.png.001.png
        pr2_robot/models/soda_can/model-1_2.sdf
        pr2_robot/models/soda_can/model-1_3.sdf
        pr2_robot/models/soda_can/model-1_4.sdf
        pr2_robot/models/soda_can/model.config
        pr2_robot/models/soda_can/model.sdf
        pr2_robot/models/sticky_notes/materials/scripts/sticky_notes.material
        pr2_robot/models/sticky_notes/materials/textures/optimized_tsdf_texture_mapped_mesh.png
        pr2_robot/models/sticky_notes/meshes/sticky_notes.dae
        pr2_robot/models/sticky_notes/model.config
        pr2_robot/models/sticky_notes/model.sdf
        pr2_robot/models/twin_table/meshes/twin_table.dae
        pr2_robot/models/twin_table/model.config
        pr2_robot/models/twin_table/model.sdf
        pr2_robot/models/asus_xtion.dae
        pr2_robot/models/README.md
        pr2_robot/scripts/rospy_message_converter/__init__.py
        pr2_robot/scripts/rospy_message_converter/json_message_converter.py
        pr2_robot/scripts/rospy_message_converter/message_converter.py
        pr2_robot/scripts/grasp_server.py
        pr2_robot/scripts/pcl_helper.py
        pr2_robot/scripts/pr2_safe_spawner.sh
        pr2_robot/scripts/project_template.py
        pr2_robot/src/pr2_cloud_transformer.cpp
        pr2_robot/src/pr2_motion.cpp
        pr2_robot/src/pr2_pick_place_server.cpp
        pr2_robot/srv/Grasp.srv
        pr2_robot/srv/PickPlace.srv
        pr2_robot/urdf/common.xacro
        pr2_robot/urdf/materials.urdf.xacro
        pr2_robot/urdf/pr2.gazebo.xacro
        pr2_robot/urdf/pr2.urdf.xacro
        pr2_robot/urdf/sensor.urdf.xacro
        pr2_robot/worlds/challenge.world
        pr2_robot/worlds/demo.world
        pr2_robot/worlds/tabletop.world
        pr2_robot/worlds/test1.world
        pr2_robot/worlds/test2.world
        pr2_robot/worlds/test3.world
        pr2_robot/CMakeLists.txt
        pr2_robot/package.xml
        LICENSE
        README.md
        writeup_template.md)

add_executable(RoboND_Perception_Project ${SOURCE_FILES})